# FlickTrove

./: .gitignore  Cinemaniac.json  LICENSE  MIGRATION_COMPLETE_DIFF.patch  MIGRATION_STABILITY_AND_PERFORMANCE_REPORT.md  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  Test.kt  build.gradle.kts  build_errors.txt  design.md  extract_har.js  figma_export.js  fix_alpha2.py  fix_haze.py  fix_settings_alpha.py  get-spaces.ps1  gradle.properties  move_nav.py  replace_icons_settings.js  settings.gradle.kts  simpsons_s1.json  swap_sections.js  test.kts  test_date.kts  test_sort.kts  test_urls.kts  tmdb_105.json  update_settings_icons.js  update_widget.py  update_widget2.py
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/schemas/com.cinetrack.data.local.database.FlickTroveDatabase/: 10.json  11.json  12.json  6.json  7.json  8.json  9.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/anim/: morph_logo.xml
app/src/main/res/drawable/: avd_logo_morph.xml  ic_2_server.xml  (+129 more)
baselineprofile/: build.gradle.kts
baselineprofile/src/main/: AndroidManifest.xml
docs/: index.html  open.html  privacy.html  robots.txt  script.js  sitemap.xml  styles.css  terms.html
docs/.well-known/: assetlinks.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scratch/: convert_properly.js  convert_root.js  fix_launcher.js  update_settings_icons.js  update_viewmodels.py
(+318 files in other folders)
